--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Waveli/Map
+ContentBrowserTab1.SelectedPaths=/Game/FantasyFX/Effect
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -181,7 +181,11 @@ LastLevel=/Game/Waveli/Map/Classroom_V1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter.BP_ALS_AnimMan_Shooter
+OpenAssetsAtExit=/Game/Waveli/AI/BTS_UpdateInfo.BTS_UpdateInfo
+OpenAssetsAtExit=/Game/Waveli/AI/BT_AI_Main.BT_AI_Main
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/BP_AIController_GameJam.BP_AIController_GameJam
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1066,26 +1070,26 @@ MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem9=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Map/Classroom_V1
-MRUItem1=/Game/ChenMaterial/Classroom_chenVersion
-MRUItem2=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
-MRUItem3=/Game/Waveli/Weapon/BP_PickUp_HPPack
-MRUItem4=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem5=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem6=/Game/Waveli/Weapon/BP_PickUp_Bullet
-MRUItem7=/Game/Waveli/AI/BTService_BlueprintBase_New
-MRUItem8=/Game/Waveli/AI/BT_AI_Main
-MRUItem9=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
-MRUItem10=/Game/Waveli/Weapon/BP_BasePickUp
-MRUItem11=/Game/Waveli/Weapon/BP_BasePick
-MRUItem12=/Game/Waveli/Weapon/BP_NerfCanon
-MRUItem13=/Game/Waveli/Weapon/BP_NerfPistol
-MRUItem14=/Game/Waveli/HUD/Widget_PickUp
-MRUItem15=/Game/Waveli/Weapon/BP_Weapon_NerfCanon
-MRUItem16=/Game/Waveli/Weapon/BP_Weapon_NerfRifle
-MRUItem17=/Game/Waveli/Weapon/Enum_Weapon
-MRUItem18=/Game/Waveli/Weapon/BP_Weapon_ToyPistol
-MRUItem19=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
+MRUItem0=/Game/FantasyFX/Effect/shoot01_emit
+MRUItem1=/Game/Waveli/Weapon/BP_Pistol_Bullet
+MRUItem2=/Game/FantasyFX/Effect/aoe01_emit
+MRUItem3=/Game/Waveli/AI/BP_AIController_GameJam
+MRUItem4=/Game/Waveli/AI/BT_AI_Main
+MRUItem5=/Game/Waveli/AI/BTS_UpdateInfo
+MRUItem6=/Game/Waveli/Map/Classroom_V1
+MRUItem7=/Game/ChenMaterial/Classroom_chenVersion
+MRUItem8=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem9=/Game/Waveli/Weapon/BP_PickUp_HPPack
+MRUItem10=/Game/Waveli/Weapon/BP_BaseWeapon
+MRUItem11=/Game/Waveli/Weapon/BP_NerfRifle
+MRUItem12=/Game/Waveli/Weapon/BP_PickUp_Bullet
+MRUItem13=/Game/Waveli/AI/BTService_BlueprintBase_New
+MRUItem14=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
+MRUItem15=/Game/Waveli/Weapon/BP_BasePickUp
+MRUItem16=/Game/Waveli/Weapon/BP_BasePick
+MRUItem17=/Game/Waveli/Weapon/BP_NerfCanon
+MRUItem18=/Game/Waveli/Weapon/BP_NerfPistol
+MRUItem19=/Game/Waveli/HUD/Widget_PickUp
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2241,6 +2245,31 @@ BP_PickUp_HPPack_C.Rendering=True
 BP_PickUp_HPPack_C.Collision=True
 BP_PickUp_HPPack_C.Actor=True
 BP_PickUp_HPPack_C.Input=True
+BTS_UpdateInfo_C.Description=True
+BTS_UpdateInfo_C.Service=True
+BP_AIController_GameJam_C.Tick=True
+BP_AIController_GameJam_C.AI=True
+BP_AIController_GameJam_C.Controller=True
+BP_AIController_GameJam_C.Replication=True
+BP_AIController_GameJam_C.Actor=True
+BP_AIController_GameJam_C.Input=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.ComponentTick=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2289,6 +2318,8 @@ LastLogListing=PIE
 /Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon=1
 /Game/Waveli/Weapon/BP_NerfRifle.BP_NerfRifle=1
 /Game/Waveli/AI/BTS_UpdateInfo.BTS_UpdateInfo=1
+/Game/FantasyFX/Effect/shoot01_emit.shoot01_emit=1
+/Game/FantasyFX/Effect/aoe01_emit.aoe01_emit=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2400,7 +2431,7 @@ MagicLeapSDKSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
@@ -2408,11 +2439,11 @@ CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" "
 CapsuleComponent=
 ShapeComponent=
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
-SceneComponent=
+SceneComponent="\"Object.Lighting.LightingChannels\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -2429,7 +2460,7 @@ BP_Pistol_Bullet_C=
 ProjectileMovementComponent=
 ALS_Player_Controller_C="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
 PlayerController="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
-Controller="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+Controller="\"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
 TextRenderComponent="\"Object.Lighting.LightingChannels\" "
 TextBlock="\"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" "
@@ -2443,6 +2474,10 @@ BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+BP_AIController_GameJam_C="\"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+AIController="\"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
+NiagaraComponent="\"Object.Lighting.LightingChannels\" "
+FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2544,6 +2579,7 @@ BillboardComponent=CapsuleComponent.Physics.ConstraintsGroup,
 BP_PickUp_HP_C=CapsuleComponent.Physics.ConstraintsGroup,
 BP_PickUp_Bullet_C=
 BP_PickUp_HPPack_C=CapsuleComponent.Physics.ConstraintsGroup,
+BTS_UpdateInfo_C=
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
