AI可以运行了！
AI可以运行了！

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FantasyFX/Effect
+ContentBrowserTab1.SelectedPaths=/Game/Waveli/AI
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -177,10 +177,33 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Waveli/Map/Classroom_V1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_Shot.SBT_Shot
+OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/AI/ALS_BB_AICharacter.ALS_BB_AICharacter
+OpenAssetsAtExit=/Game/Waveli/AI/BTT_AIShoot.BTT_AIShoot
+OpenAssetsAtExit=/Game/Waveli/AI/BT_AI_Main.BT_AI_Main
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter.BP_ALS_AnimMan_AIShooter
+OpenAssetsAtExit=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter.BP_ALS_AnimMan_Shooter
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Rifle_Bullet.BP_Rifle_Bullet
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Canon_Bullet.BP_Canon_Bullet
+OpenAssetsAtExit=/Game/ZiHui/HUD/Widget_EnemyHPBar.Widget_EnemyHPBar
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_MoveJump.SBT_MoveJump
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/BTS_UpdateInfo.BTS_UpdateInfo
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_MoveToBullet.SBT_MoveToBullet
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_MoveToHPPack.SBT_MoveToHPPack
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_MoveShot.SBT_MoveShot
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_JumpShot.SBT_JumpShot
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
+OpenAssetsAtExit=/Game/Waveli/AI/SBT_MoveToWeapon.SBT_MoveToWeapon
+OpenAssetsAtExit=/Game/Waveli/AI/BB_AI_BB.BB_AI_BB
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1065,26 +1088,26 @@ MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem9=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Weapon/BP_PickUp_Bullet
-MRUItem1=/Game/Waveli/Weapon/BP_PickUp_HPPack
-MRUItem2=/Game/Waveli/Weapon/BP_Pistol_Bullet
-MRUItem3=/Game/Waveli/HUD/Widget_EnemyHPBar
-MRUItem4=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
-MRUItem5=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem0=/Game/Waveli/AI/SBT_MoveToWeapon
+MRUItem1=/Game/Waveli/AI/SBT_JumpShot
+MRUItem2=/Game/Waveli/AI/BTT_MoveToObject
+MRUItem3=/Game/Waveli/AI/SBT_MoveShot
+MRUItem4=/Game/Waveli/AI/SBT_MoveToHP
+MRUItem5=/Game/Waveli/AI/SBT_MoveToBullet
 MRUItem6=/Game/Waveli/AI/BTS_UpdateInfo
-MRUItem7=/Game/Waveli/AI/BT_AI_Main
-MRUItem8=/Game/Waveli/Map/Classroom_V1
-MRUItem9=/Game/FantasyFX/Effect/shoot01_emit
-MRUItem10=/Game/FantasyFX/Effect/aoe01_emit
-MRUItem11=/Game/Waveli/AI/BP_AIController_GameJam
-MRUItem12=/Game/ChenMaterial/Classroom_chenVersion
-MRUItem13=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem14=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem15=/Game/Waveli/AI/BTService_BlueprintBase_New
-MRUItem16=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
-MRUItem17=/Game/Waveli/Weapon/BP_BasePickUp
-MRUItem18=/Game/Waveli/Weapon/BP_BasePick
-MRUItem19=/Game/Waveli/Weapon/BP_NerfCanon
+MRUItem7=/Game/Waveli/AI/SBT_Move
+MRUItem8=/Game/ZiHui/HUD/Widget_EnemyHPBar
+MRUItem9=/Game/Waveli/Weapon/BP_Canon_Bullet
+MRUItem10=/Game/Waveli/Weapon/BP_Rifle_Bullet
+MRUItem11=/Game/Waveli/HUD/Widget_EnemyHPBar
+MRUItem12=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem13=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
+MRUItem14=/Game/Waveli/AI/BT_AI_Main
+MRUItem15=/Game/Waveli/AI/BTT_AIShoot
+MRUItem16=/Game/Waveli/AI/SBT_Shot
+MRUItem17=/Game/Waveli/Map/Classroom_V1
+MRUItem18=/Game/Waveli/Weapon/BP_PickUp_Bullet
+MRUItem19=/Game/Waveli/Weapon/BP_PickUp_HPPack
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2274,6 +2297,45 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+BTT_AIShoot_C.Task=True
+BTT_AIShoot_C.Description=True
+BP_Rifle_Bullet_C.Tick=True
+BP_Rifle_Bullet_C.Default=True
+BP_Rifle_Bullet_C.Replication=True
+BP_Rifle_Bullet_C.Rendering=True
+BP_Rifle_Bullet_C.Collision=True
+BP_Rifle_Bullet_C.Actor=True
+BP_Rifle_Bullet_C.Input=True
+BP_Canon_Bullet_C.Tick=True
+BP_Canon_Bullet_C.Default=True
+BP_Canon_Bullet_C.Replication=True
+BP_Canon_Bullet_C.Rendering=True
+BP_Canon_Bullet_C.Collision=True
+BP_Canon_Bullet_C.Actor=True
+BP_Canon_Bullet_C.Input=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_RotateToFaceBBEntry.Node=True
+BTTask_RotateToFaceBBEntry.Blackboard=True
+BTTask_RotateToFaceBBEntry.Task=True
+BTTask_RotateToFaceBBEntry.Description=True
+BTTask_RunBehavior.Node=True
+BTTask_RunBehavior.Task=True
+BTTask_RunBehavior.Description=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Actor=True
+BTT_RandomJump_C.Default=True
+BTT_RandomJump_C.Task=True
+BTT_RandomJump_C.Description=True
+BTT_MoveToObject_C.Default=True
+BTT_MoveToObject_C.Task=True
+BTT_MoveToObject_C.Description=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2325,6 +2387,8 @@ LastLogListing=PIE
 /Game/Waveli/AI/BTS_UpdateInfo.BTS_UpdateInfo=1
 /Game/FantasyFX/Effect/shoot01_emit.shoot01_emit=1
 /Game/FantasyFX/Effect/aoe01_emit.aoe01_emit=1
+/Game/Waveli/HUD/Widget_EnemyHPBar.Widget_EnemyHPBar=1
+/Game/Waveli/AI/BTT_MoveToObject.BTT_MoveToObject=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2436,7 +2500,7 @@ MagicLeapSDKSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Blackboard\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
@@ -2447,7 +2511,7 @@ MovementComponent="\"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
 CapsuleComponent=
 ShapeComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -2483,13 +2547,15 @@ BP_AIController_GameJam_C="\"Object.Controller.Controller|Transform\" \"Object.R
 AIController="\"Object.Controller.Controller|Transform\" \"Object.Replication.ReplicatedMovement\" "
 NiagaraComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
-BP_ALS_AnimMan_AIShooter_C="\"Object.Colors.DefaultColor\" \"Object.Colors.SkinColor\" \"Object.Colors.ShirtColor\" \"Object.Colors.PantsColor\" \"Object.Colors.ShoesColor\" \"Object.Colors.GlovesColor\" \"Object.Movement System.MovementModel\" \"Object.Mantle System.GroundedTraceSettings\" \"Object.Mantle System.AutomaticTraceSettings\" \"Object.Mantle System.FallingTraceSettings\" \"Object.Actor.Tags\" "
+BP_ALS_AnimMan_AIShooter_C=
 BP_ALS_AnimMan_Shooter_C=
 ALS_AnimMan_CharacterBP_C=
 ALS_Base_CharacterBP_C=
 Character=
 Pawn=
 WidgetComponent="\"Object.Collision.BodyInstance\" "
+AISystem="\"Object.Blackboard\" "
+AISystemBase="\"Object.Blackboard\" "
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2593,6 +2659,7 @@ BP_PickUp_Bullet_C=
 BP_PickUp_HPPack_C=CapsuleComponent.Physics.ConstraintsGroup,
 BTS_UpdateInfo_C=
 Widget_EnemyHPBar_C=
+BTT_AIShoot_C=
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2702,6 +2769,7 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
+ChangeVariableType_Warning=False
 
 [DetailCategoriesAdvanced]
 TextRenderComponent.Text=True
