#-1 美术特效上传
#-1 美术特效上传

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -14,7 +14,7 @@ bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
 bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=1
 AssetViewerProfileName=
 MaterialQualityLevel=1
 PreviewFeatureLevel=3
@@ -179,14 +179,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FantasyFX/Maps/Classroom_ttc
+LastLevel=/Game/Waveli/Map/Classroom_V1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/FantasyFX/Effect/shoot01_boom.shoot01_boom
+OpenAssetsAtExit=/Game/FantasyFX/Materials/M_Commonn_zidan01.M_Commonn_zidan01
+OpenAssetsAtExit=/Game/FantasyFX/Effect/aoe01_boom.aoe01_boom
+OpenAssetsAtExit=/Game/FantasyFX/Effect/NewNiagaraSystem.NewNiagaraSystem
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet
 
 [RootWindow]
-ScreenPosition=X=135.000 Y=96.000
+ScreenPosition=X=669.000 Y=78.000
 WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
@@ -205,7 +210,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=E:/Game/GameJ/Demo/Content/FantasyFX/Maps
-UNR=E:/Game/GameJ/Demo/Content/FantasyFX/Maps
+UNR=E:/Game/GameJ/Demo/Content/Waveli/Map
 None=======
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
@@ -1036,8 +1041,8 @@ SceneOutliner.TimeStamp=2021.10.30-03.00.46
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.10.30-03.00.41
 HierarchicalLODOutliner.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2021.10.18-16.41.17
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.10.30-03.00.41
+HierarchicalLODUtilities.LastCompileMethod=External
 Voice.TimeStamp=2021.10.30-03.00.48
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.10.30-03.00.44
@@ -1062,10 +1067,12 @@ Cascade.TimeStamp=2021.10.30-03.00.38
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2021.10.30-03.00.40
 DistCurveEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2021.10.30-03.00.47
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FantasyFX/Maps/Classroom_ttc
-MRUItem1=/Game/Waveli/Map/Classroom_V1
+MRUItem0=/Game/Waveli/Map/Classroom_V1
+MRUItem1=/Game/FantasyFX/Maps/Classroom_ttc
 MRUItem2=/Game/ChenMaterial/Classroom_chenVersion
 MRUItem3=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
 MRUItem4=/Game/Waveli/Map/SampleMap
@@ -1077,26 +1084,26 @@ MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem10=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FantasyFX/Effect/Dust
-MRUItem1=/Game/OldClassroom/StarterContent/Particles/P_Ambient_Dust
-MRUItem2=/Game/FantasyFX/Maps/Classroom_ttc
-MRUItem3=/Game/Waveli/Map/Classroom_V1
-MRUItem4=/Game/FantasyFX/Effect/body
-MRUItem5=/Game/FantasyFX/Effect/body2
-MRUItem6=/Game/Meshes/StaticMesh
-MRUItem7=/Game/FantasyFX/Effect/shoot01_emit
-MRUItem8=/Game/Waveli/Weapon/BP_Pistol_Bullet
-MRUItem9=/Game/FantasyFX/Effect/aoe01_emit
-MRUItem10=/Game/Waveli/AI/BP_AIController_GameJam
-MRUItem11=/Game/Waveli/AI/BT_AI_Main
-MRUItem12=/Game/Waveli/AI/BTS_UpdateInfo
-MRUItem13=/Game/ChenMaterial/Classroom_chenVersion
-MRUItem14=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
-MRUItem15=/Game/Waveli/Weapon/BP_PickUp_HPPack
-MRUItem16=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem17=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem18=/Game/Waveli/Weapon/BP_PickUp_Bullet
-MRUItem19=/Game/Waveli/AI/BTService_BlueprintBase_New
+MRUItem0=/Game/FantasyFX/Materials/M_Commonn_zidan01
+MRUItem1=/Game/FantasyFX/Materials/M_Commonn_tw02
+MRUItem2=/Game/FantasyFX/Materials/M_Commonn_tw01
+MRUItem3=/Game/FantasyFX/Effect/NewNiagaraSystem
+MRUItem4=/Game/FantasyFX/Materials/M_Commonn
+MRUItem5=/Game/Waveli/Weapon/BP_Pistol_Bullet
+MRUItem6=/Game/FantasyFX/Effect/tw
+MRUItem7=/Game/FantasyFX/Effect/aoe01_boom
+MRUItem8=/Game/Realistic_Starter_VFX_Pack_Niagara/Textures/T_Smoke_1
+MRUItem9=/Game/Realistic_Starter_VFX_Pack_Niagara/Materials/M_Smoke_2
+MRUItem10=/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_Big_7
+MRUItem11=/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_C4_2
+MRUItem12=/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_BlackHole
+MRUItem13=/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_Grenade_2
+MRUItem14=/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_Sand_2
+MRUItem15=/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Impact/NS_Impact_Wood
+MRUItem16=/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Floor
+MRUItem17=/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Dripping
+MRUItem18=/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Burst
+MRUItem19=/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Destruction/NS_Destruction_Wood
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2395,8 +2402,8 @@ NiagaraComponent.Variable=True
 NiagaraComponent.TransformCommon=True
 NiagaraComponent.Sockets=True
 NiagaraComponent.Niagara=True
-NiagaraComponent.Parameters=False
-NiagaraComponent.Attachment=False
+NiagaraComponent.Parameters=True
+NiagaraComponent.Attachment=True
 NiagaraComponent.Compilation=True
 NiagaraComponent.ComponentTick=True
 NiagaraComponent.NiagaraComponent_Parameters=False
@@ -2503,6 +2510,16 @@ ParticleSystemComponent.Cooking=True
 ParticleModuleSubUV.SubUV=True
 ParticleModuleSubUV.Realtime=True
 ParticleModuleSubUV.Cascade=True
+BP_Pistol_Bullet_C.默认=True
+NiagaraScript.Script=True
+NiagaraScript.NiagaraScript_InputParams=True
+NiagaraScript.NiagaraScript_OutputParams=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2517,6 +2534,9 @@ InstalledPlugins=NodeGraphAssistant
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/FantasyFX/Effect/aoe01_emit.aoe01_emit;
+RecentlyPlaced=/Game/FantasyFX/Effect/shoot01_emit.shoot01_emit;
+RecentlyPlaced=/Game/FantasyFX/Effect/tw.tw;
 RecentlyPlaced=/Game/FantasyFX/Effect/Dust.Dust;
 RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
@@ -2534,13 +2554,10 @@ RecentlyPlaced=/Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_Weapon_NerfRifle.BP_Weapon_NerfRifle;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_Weapon_NerfPistol.BP_Weapon_NerfPistol;
 RecentlyPlaced=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter.BP_ALS_AnimMan_AIShooter;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini;
-RecentlyPlaced=/Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk;
 None=======
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2612,6 +2629,30 @@ None=======
 /Game/Waveli/Map/Classroom_V1.Classroom_V1:PersistentLevel.Classroom_V1=1
 /Game/FantasyFX/Effect/Dust.Dust=1
 /Game/OldClassroom/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust=1
+/Niagara/Modules/Collision/Collision.Collision=1
+/Game/FantasyFX/Materials/Splash/M_Splash_CircleParticle.M_Splash_CircleParticle=1
+/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet=1
+/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Shoot/NS_Shoot_Grad_5.NS_Shoot_Grad_5=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Shoot/NS_Shoot_Grad_2.NS_Shoot_Grad_2=1
+/Game/FantasyFX/Effect/body2.body2=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Sparks/NS_Sparks_04.NS_Sparks_04=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Sparks/NS_Sparks_03.NS_Sparks_03=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Destruction/NS_Destruction_Building_02.NS_Destruction_Building_02=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Floor.NS_Fire_Floor=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Burst.NS_Fire_Burst=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Fire/NS_Fire_Dripping.NS_Fire_Dripping=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Impact/NS_Impact_Wood.NS_Impact_Wood=1
+/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_Sand_2.NS_Explosion_Sand_2=1
+/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_Grenade_2.NS_Explosion_Grenade_2=1
+/Game/Sci-Fi_Starter_VFX_Pack_Niagara/Niagara/Explosion/NS_Explosion_BlackHole.NS_Explosion_BlackHole=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Niagara/Shoot/NS_Shoot_Grad_1.NS_Shoot_Grad_1=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Textures/T_Smoke_1.T_Smoke_1=1
+/Game/FantasyFX/Materials/M_Commonn.M_Commonn=1
+/Game/FantasyFX/Effect/tw.tw=1
+/Game/Realistic_Starter_VFX_Pack_Niagara/Materials/M_Smoke_2.M_Smoke_2=1
+/Game/FantasyFX/Effect/NewNiagaraSystem.NewNiagaraSystem=1
+/Game/FantasyFX/Materials/M_Commonn_tw01.M_Commonn_tw01=1
+/Game/FantasyFX/Materials/M_Commonn_tw02.M_Commonn_tw02=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2723,7 +2764,7 @@ MagicLeapSDKSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
@@ -2746,7 +2787,7 @@ MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInsta
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModule=
-ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit.Distribution\" "
+ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
@@ -2884,7 +2925,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 UMG_GameStart_C=
 BP_ALS_AnimMan_Shooter_C=
 K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
-BP_Pistol_Bullet_C=CapsuleComponent.Physics.ConstraintsGroup,
+BP_Pistol_Bullet_C=
 StaticMeshComponent=
 ProjectileMovementComponent=
 MovementComponent=
@@ -2908,6 +2949,8 @@ BP_PickUp_Bullet_C=
 BP_PickUp_HPPack_C=CapsuleComponent.Physics.ConstraintsGroup,
 BTS_UpdateInfo_C=
 ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.基本形态,MaterialEditorInstanceConstant.ParameterGroups.扭曲贴图,MaterialEditorInstanceConstant.ParameterGroups.折射,MaterialEditorInstanceConstant.ParameterGroups.遮罩贴图,
+MaterialInstanceConstant=
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2957,8 +3000,8 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeExpressionViewport=True
 bAlwaysRefreshAllPreviews=True
-bShowGrid=False
 None=======
+bRealtimeMaterialViewport=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3065,4 +3108,64 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
