--- a/Demo/Config/DefaultEngine.ini
+++ b/Demo/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Demo
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Waveli/Map/Classroom_V1.Classroom_V1
+GameDefaultMap=/Game/Waveli/Map/Classroom_V1.Classroom_V1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
